--- a/quizProject/index.html
+++ b/quizProject/index.html
@@ -16,32 +16,32 @@
                 </h2>
                 <ul>
                     <li>
-                        <input type="radio" id="a" name="answer"/>
+                        <input type="radio" id="a" name="answer" value="a"/>
                         <label id="L_a" for="a">
                             Answer a
                         </label>
                     </li>
                     <li>
-                        <input type="radio" id="b" name="answer"/>
+                        <input type="radio" id="b" name="answer" value="b"/>
                         <label id="L_b" for="b">
                             Answer b
                         </label>
                     </li>
                     <li>
-                        <input type="radio" id="c" name="answer"/>
+                        <input type="radio" id="c" name="answer" value="c"/>
                         <label id="L_c" for="c">
                             Answer c
                         </label>
                     </li>
                     <li>
-                        <input type="radio" id="d" name="answer"/>
+                        <input type="radio" id="d" name="answer" value="d"/>
                         <label id="L_d" for="d">
                             Answer d
                         </label>
                     </li>
                 </ul>
-                <p id="placar">
-                placar
+                <p id="score">
+                score
                 </p>
             </div>
             <button type="button" id="botao">
