--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -21,6 +21,9 @@
             Submit
         </button>
     </div>
+    <div class="links">
+        <a href="https://github.com/DnzGus" target="_blank">Find me here!</a>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
