Up(clean-finished)

--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -11,13 +11,13 @@
 <body>
     <h1>Translate it!</h1>
     <div class="area">
-        <div class="resp">
-            <h2 id="frase">
+        <div class="area_UI">
+            <h2 id="word">
                 Frase
             </h2>
-            <input type="text" name="resposta" class="box" id="resp" placeholder="type here">
+            <input type="text" name="answer" class="answer_box" id="word_answer" placeholder="type here">
         </div>
-        <button class="but" id="but" onclick="botao()">
+        <button id="button" onclick="button()">
             Submit
         </button>
     </div>
