Update(new points system)

--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -21,6 +21,16 @@
             Submit
         </button>
     </div>
+    <div class="score">
+        <div class="corrects">
+        <h3>corrects</h3>
+        <p id="pointsC">0</p>
+        </div>
+        <div class="wrongs">
+        <h3>wrongs</h3>
+        <p id="pointsW">0</p>
+        </div>
+    </div>
     <div class="links">
         <a href="https://github.com/DnzGus" target="_blank">Find me here!</a>
     </div>
