--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -21,15 +21,9 @@
             Submit
         </button>
     </div>
-    <div class="score">
-        <div class="corrects">
-        <h3>corrects</h3>
-        <p id="pointsC">0</p>
-        </div>
-        <div class="wrongs">
-        <h3>wrongs</h3>
-        <p id="pointsW">0</p>
-        </div>
+    <div class="wrongs">
+        <h3>Lives</h3>
+        <p id="life">5</p>
     </div>
     <div class="links">
         <a href="https://github.com/DnzGus" target="_blank">Find me here!</a>
