--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -26,7 +26,8 @@
         <p id="life">5</p>
     </div>
     <div class="links">
-        <a href="https://github.com/DnzGus" target="_blank">Find me here!</a>
+        <a href="https://github.com/DnzGus" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/gustavo-diniz-653815238/" target="_blank">Linkedin</a>
     </div>
     <script src="index.js"></script>
 </body>
