--- a/Trabalho Web/abuso.html
+++ b/Trabalho Web/abuso.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Abuso-infantil</title>
+    <title>Abuso-sexual</title>
     <link rel="stylesheet" href="scss/main.css"/>
     <link rel="stylesheet" href="scss/main.scss"/>
 </head>
@@ -24,10 +24,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Menu</a>
             <a class="nav-link active" aria-current="page" href="#">Abuso sexual infantil</a>
             <a class="nav-link" href="negligencia.html">Negligência infantil | abandono</a>
-            <a class="nav-link" href="psicologico.html">Violência psicológica | emocional</a>
+            <a class="nav-link" href="psicologica.html">Violência psicológica | emocional</a>
             <a class="nav-link" href="forms.html">Disabled</a>
           </div>
         </div>
@@ -51,19 +51,19 @@
               O abuso acontece quando um adulto ou adolescente mais velho usa de crianças e adolescentes para satisfação de seus prazeres sexuais. É considerado praticas de abuso sexual carícias, manipulação das genitálias, ânus e mama, ato sexual com ou sem penetração, entre outros. As violências são na maior parte presumidas em menores de quatorze anos (PFEIFFER E SALVAGNI, 2005).<br>
               Dessa forma, é importante ressaltar que os casos de abuso sexual têm ligações diretas com a imagem de “poder” que o agressor passa para as vítimas, por se tratar de ter algum grau de parentesco, sendo da família ou bem próximo da família. Por ser assim, se torna um alvo difícil de suspeitar e resulta na complicação da necessidade de confirmação dos abusos sexuais infantis (PFEIFFER E SALVAGNI, 2005).<br><br>
               <span class="fw-bold">Conclusão:</span><br>
-              Com base em pesquisas realizadas foram encontrados levantamentos de estudos feitos em diversas cidades, estados e países. Sendo assim, concluímos que os casos de abuso sexual e violência sexual é um problema de saúde pública em vários lugares do mundo, e a organização mundial de saúde (OMS) elenca um banco de dados frequentemente, bem como, busca orientar nas capacitações de profissionais que trabalharam diretamente com esses casos.
-              <br>Segundo dados do ministério da saúde, a maior parte das vítimas de estupro é constituída por crianças e adolescentes, em torno de 70% dos casos denunciados. Os agressores mais comuns são membros da própria família ou pessoas do convívio da vítima.</p>
+              Com base em pesquisas realizadas foram encontrados levantamentos de estudos feitos em diversas cidades, estados e países. Sendo assim, concluímos que os casos de abuso sexual e violência sexual é um problema de saúde pública em vários lugares do mundo, e a organização mundial de saúde (OMS) elenca um banco de dados frequentemente, bem como, busca orientar nas capacitações de profissionais que trabalharam diretamente com esses casos.<br>
+            Segundo dados do ministério da saúde, a maior parte das vítimas de estupro é constituída por crianças e adolescentes, em torno de 70% dos casos denunciados. Os agressores mais comuns são membros da própria família ou pessoas do convívio da vítima.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="card card-body margem-top">
             <h5>Referências e Matérias sobre:</h5>
             <p class="card-text">
-              <a class="links" href="https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1">https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1</a>
+              <a target="_blank" class="links" href="https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1">https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1</a>
               <br><br>
-              <a class="links" href="https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm">https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm</a>
+              <a target="_blank" class="links" href="https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm">https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm</a>
               <br><br>
-              <a class="links" href="https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater">https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater</a>
+              <a target="_blank" class="links" href="https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater">https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater</a>
             </p>
           </div>
         </div>
