--- a/Trabalho Web/index.html
+++ b/Trabalho Web/index.html
@@ -24,10 +24,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Menu</a>
             <a class="nav-link" href="abuso.html">Abuso sexual infantil</a>
             <a class="nav-link" href="negligencia.html">Negligência infantil | abandono</a>
-            <a class="nav-link" href="psicologico.html">Violência psicológica | emocional</a>
+            <a class="nav-link" href="psicologica.html">Violência psicológica | emocional</a>
             <a class="nav-link" href="forms.html">Disabled</a>
           </div>
         </div>
