--- a/Trabalho Web/negligencia.html
+++ b/Trabalho Web/negligencia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Abuso-infantil</title>
+    <title>Negligência infantil | abandono</title>
     <link rel="stylesheet" href="scss/main.css"/>
     <link rel="stylesheet" href="scss/main.scss"/>
 </head>
@@ -24,10 +24,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Home</a>
-            <a class="nav-link active" aria-current="page" href="#">Abuso sexual infantil</a>
-            <a class="nav-link" href="negligencia.html">Negligência infantil | abandono</a>
-            <a class="nav-link" href="psicologico.html">Violência psicológica | emocional</a>
+            <a class="nav-link" href="index.html">Menu</a>
+            <a class="nav-link" href="abuso.html">Abuso sexual infantil</a>
+            <a class="nav-link active" aria-current="page" href="#">Negligência infantil | abandono</a>
+            <a class="nav-link" href="psicologica.html">Violência psicológica | emocional</a>
             <a class="nav-link" href="forms.html">Disabled</a>
           </div>
         </div>
@@ -41,29 +41,30 @@
         </div>
         <div class="col-lg-8">
           <div class="card card-body margem-top">
-            <h5>Abuso sexual infantil:</h5>
-            <p class="card-text">Ao se referir à violência sexual encontramos duas vertentes que se encaixam dentro do assunto sendo elas: exploração sexual e abuso sexual. A exploração sexual tem ligação com o comércio de corpos e sexos, o acesso à exploração se da por meio de pornografia, prostituição, turismo sexual e tráfico.  Enquanto, que, abuso sexual ocorre quando um adulto tem interesse sexual por crianças ou adolescentes tanto com pessoas de vínculo familiar quanto em pessoas que não são do vínculo familiar (FLORENTINO, 2015).<br>
-              Sendo assim, é considerada constitutiva essa atitude de agressão do ser humano e os controles desses impulsos destrutivos se dão pelo processo de socialização. Com tudo, o uso da agressividade é decorrente da violência, tendo os fins destrutíveis que podem ser considerados voluntário-involuntários, racional/irracional, consciente/inconsciente. Os vínculos que foram criados com outras pessoas se tornam internalizados e ficam de lado os que são externos (CAPITÃO e ROMARO, 2008).<br>
-              De acordo com Florentino (2015) dentre esses assuntos cabe considerar que o abuso sexual faz o levantamento sobre violência domestica, violência sexual, e principalmente a violência contra crianças, adolescente e adultos. Diante desses levantamentos é possivel destacar que o sexo da vítima não importa, o agressor possui desejos e pode ser que esses sejam saciados dentro da própria família por longos tempos e por cobertura de alguns parentescos.<br><br>
-              <span class="fw-bold">O que é o Abuso sexual?</span><br>
-              O respeito ao próximo inclui também o respeito pelas decisões que o mesmo toma, sendo assim, a relação sexual tem se tornado algo cada vez mais propagado e difundido na sociedade, atualmente sua representação tem sido de formas distorcidas do que se pensava relacionável. Ocorrendo desenfreadamente a busca de novas situações não importando se vai além dos limites permitido para que não ultrapasse os direitos de outro ser humano (PFEIFFER e SALVAGNI, 2005).<br>
-              Entretanto, mesmo tendo evolução nos processos morais e legais de defesa da criança e adolescente, os casos de abusos sexuais ainda existem e não deixa de acontecer, e muito menos, deixa de ser visto de forma onde é um crime que deixa sequelas, danos, traumas e até mesmo transtornos e patologias que são consideradas irreparáveis para as vítimas (PFEIFFER E SALVAGNI, 2005).<br>
-              O abuso acontece quando um adulto ou adolescente mais velho usa de crianças e adolescentes para satisfação de seus prazeres sexuais. É considerado praticas de abuso sexual carícias, manipulação das genitálias, ânus e mama, ato sexual com ou sem penetração, entre outros. As violências são na maior parte presumidas em menores de quatorze anos (PFEIFFER E SALVAGNI, 2005).<br>
-              Dessa forma, é importante ressaltar que os casos de abuso sexual têm ligações diretas com a imagem de “poder” que o agressor passa para as vítimas, por se tratar de ter algum grau de parentesco, sendo da família ou bem próximo da família. Por ser assim, se torna um alvo difícil de suspeitar e resulta na complicação da necessidade de confirmação dos abusos sexuais infantis (PFEIFFER E SALVAGNI, 2005).<br><br>
-              <span class="fw-bold">Conclusão:</span><br>
-              Com base em pesquisas realizadas foram encontrados levantamentos de estudos feitos em diversas cidades, estados e países. Sendo assim, concluímos que os casos de abuso sexual e violência sexual é um problema de saúde pública em vários lugares do mundo, e a organização mundial de saúde (OMS) elenca um banco de dados frequentemente, bem como, busca orientar nas capacitações de profissionais que trabalharam diretamente com esses casos.
-              <br>Segundo dados do ministério da saúde, a maior parte das vítimas de estupro é constituída por crianças e adolescentes, em torno de 70% dos casos denunciados. Os agressores mais comuns são membros da própria família ou pessoas do convívio da vítima.</p>
-          </div>
+            <h5>Negligência infantil:</h5>
+            <p class="card-text">A negligência envolve não atender às necessidades básicas da criança, sejam físicas, médicas, educacionais ou emocionais.
+              O abuso pode ser físico, sexual ou emocional.<br>
+              A negligência e o abuso infantil com frequência ocorrem ao mesmo tempo e com outras formas de violência familiar, como o abuso do parceiro íntimo. Além dos danos imediatos, a negligência e o abuso aumentam o risco de apresentar problemas de longa duração, incluindo problemas de saúde mental e transtorno de uso de substâncias. O abuso infantil também está associado com problemas na idade adulta como, por exemplo, obesidade, doença cardíaca e doença pulmonar obstrutiva crônica (DPOC).<br>
+              As crianças podem ser negligenciadas ou abusadas por pais e outros cuidadores ou parentes, pessoas que vivem na casa da criança ou pessoas que cuidam dela ocasionalmente (como professores, treinadores e clérigos).<br>
+              A Delegacia de Proteção à Criança e ao Adolescente (Child Protective Services, CPS) dos Estados Unidos recebeu, em 2020, 3,9 milhões de denúncias sobre possível abuso infantil envolvendo 7,1 milhões de crianças. Dessas denúncias, aproximadamente 2,1 milhões foram investigadas minuciosamente e, dentre essas, foram identificadas 618.000 crianças que sofreram abuso ou negligência. As meninas são um pouco mais propensas a serem maltratadas do que os meninos. Bebês e crianças pequenas têm o maior risco de sofrer abuso.<br>
+              Dentre as crianças que foram identificadas em 2020, 76,1% sofreram negligência (incluindo negligência médica), 16,5% sofreram abuso físico, 9,4% sofreram abuso sexual e 0,2% foram vítimas do tráfico sexual. Contudo, muitas crianças foram vítimas de vários tipos de abuso.<br>
+              Aproximadamente 1.750 crianças morreram devido à negligência ou abuso nos Estados Unidos em 2020, das quais cerca da metade tinha menos de um ano de idade. Cerca de 73% dessas crianças foram vítimas de negligência e 43% foram vítimas de abuso físico que ocorreu com ou sem outras formas de abuso. Cerca de 80% dos agressores eram os pais agindo sozinhos, juntos ou com outras pessoas.<br><br>
+            <span class="fw-bold">Fatores de risco para negligência e abuso infantil:</span><br>
+            A negligência e o abuso resultam de uma complexa combinação de fatores individuais, familiares e sociais. Ser mãe ou pai solteiro, sofrer com estresse financeiro ou insegurança alimentar, ter um transtorno por uso de substâncias, ter um problema de saúde mental (como transtorno de personalidade ou baixa autoestima) ou ter uma combinação desses fatores pode aumentar a probabilidade de um pai ou mãe negligenciar ou abusar uma criança.<br>
+            A negligência é identificada com uma frequência doze vezes maior nas crianças que vivem na pobreza do que as que não vivem. No entanto, todos os tipos de abuso, incluindo o abuso sexual, ocorrem em todos os grupos sociais e econômicos.<br>
+            Adultos que sofreram abusos físicos ou sexuais quando crianças são mais propensos a abusar dos seus próprios filhos. Pais de primeira vez, pais adolescentes e pais que já têm vários filhos com menos de cinco anos de idade também correm um risco maior de praticar abuso contra seus filhos. Mulheres que fumam, que têm um transtorno por uso de substâncias ou que sofreram violência por parceiro íntimo durante a gestação podem correr o risco de abusar de seus filhos.<br>
+            Às vezes, não ocorre o desenvolvimento de laços afetivos fortes entre pais e filhos. Esta ausência de laços afetivos ocorre com mais frequência em bebês prematuros ou bebês doentes que são separados dos pais no início da primeira infância ou com crianças sem relacionamento biológico (por exemplo, enteados), e isso aumenta o risco de haver abuso.</p>
+            </div>
         </div>
         <div class="col-lg-4">
           <div class="card card-body margem-top">
             <h5>Referências e Matérias sobre:</h5>
             <p class="card-text">
-              <a class="links" href="https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1">https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1</a>
+              <a target="_blank" class="links" href="https://www.msdmanuals.com/pt-br/casa/problemas-de-sa%C3%BAde-infantil/abuso-e-neglig%C3%AAncia-infantil/considera%C3%A7%C3%B5es-gerais-sobre-o-abuso-e-neglig%C3%AAncia-infantil">https://www.msdmanuals.com/pt-br/casa/problemas-de-sa%C3%BAde-infantil/abuso-e-neglig%C3%AAncia-infantil/considera%C3%A7%C3%B5es-gerais-sobre-o-abuso-e-neglig%C3%AAncia-infantil</a>
               <br><br>
-              <a class="links" href="https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm">https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm</a>
+              <a target="_blank" class="links" href="https://drauziovarella.uol.com.br/pediatria/negligencia-e-a-forma-de-violencia-mais-comum-contra-criancas-e-adolescentes/">https://drauziovarella.uol.com.br/pediatria/negligencia-e-a-forma-de-violencia-mais-comum-contra-criancas-e-adolescentes/</a>
               <br><br>
-              <a class="links" href="https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater">https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater</a>
+              <a target="_blank" class="links" href="https://amenteemaravilhosa.com.br/negligencia-emocional/">https://amenteemaravilhosa.com.br/negligencia-emocional/</a>
             </p>
           </div>
         </div>
