--- a/Trabalho Web/abuso.html
+++ b/Trabalho Web/abuso.html
@@ -28,7 +28,7 @@
             <a class="nav-link active" aria-current="page" href="#">Abuso sexual infantil</a>
             <a class="nav-link" href="negligencia.html">Negligência infantil | abandono</a>
             <a class="nav-link" href="psicologica.html">Violência psicológica | emocional</a>
-            <a class="nav-link" href="forms.html">Disabled</a>
+            <a style="color: #dc3545;" class="nav-link" href="forms.html">Faça uma denúncia</a>
           </div>
         </div>
       </div>
@@ -64,6 +64,8 @@
               <a target="_blank" class="links" href="https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm">https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm</a>
               <br><br>
               <a target="_blank" class="links" href="https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater">https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater</a>
+              <br><br>
+              <a target="_blank" class="links" href="https://www.unicef.org/brazil/protecao-de-criancas-e-adolescentes-contra-violencias">https://www.unicef.org/brazil/protecao-de-criancas-e-adolescentes-contra-violencias</a>
             </p>
           </div>
         </div>
