--- a/Trabalho Web/index.html
+++ b/Trabalho Web/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="abuso.html">Abuso sexual infantil</a>
             <a class="nav-link" href="negligencia.html">Negligência infantil | abandono</a>
             <a class="nav-link" href="psicologica.html">Violência psicológica | emocional</a>
-            <a class="nav-link" href="forms.html">Disabled</a>
+            <a class="nav-link" style="color: #dc3545;" href="forms.html">Faça uma denúncia</a>
           </div>
         </div>
       </div>
@@ -38,24 +38,33 @@
         <div class="carousel-item active">
           <img src="images/abuso-infantil.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>Proteção de Crianças e Adolescentes contra as Violências.</h5>
+            <p class="fw-bold">Ajude essa causa!</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="images/abuso-infantil2.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>Proteção de Crianças e Adolescentes contra as Violências.</h5>
+            <p class="fw-bold">Ajude essa causa!</p>
           </div>
         </div>
         <div class="carousel-item">
             <img src="images/abuso-infantil3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Proteção de Crianças e Adolescentes contra as Violências.</h5>
+              <p class="fw-bold">Ajude essa causa!</p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="container-fluid text-center white margem-top">
+          <h5>Como reconhecer e agir ao suspeitar de violência infantil?</h5>
+          <p>
+            Se você identificou sinal de violência em alguma criança, o primeiro passo é ouvi-la sem julgamentos e acolhê-la, estabelecendo uma relação de confiança e proteção. É importante que ela entenda que não vai ser punida se contar alguma situação ruim pela qual está passando. Isso porque muitas das vítimas de abuso ou maus-tratos sofrem ameaças para não revelar a violência.<br>
+            Depois de ouvir o relato, é preciso encaminhar a denúncia aos órgãos competentes, como Conselho Tutelar, Disque 100, polícia ou Ministério Público. A pessoa que viu alguma suspeita de violência e não fez denúncia, pode responder por omissão de socorro.
+          </p>
         </div>
       </div>
       <main class="container-fluid">
