--- a/Trabalho Web/negligencia.html
+++ b/Trabalho Web/negligencia.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="abuso.html">Abuso sexual infantil</a>
             <a class="nav-link active" aria-current="page" href="#">Negligência infantil | abandono</a>
             <a class="nav-link" href="psicologica.html">Violência psicológica | emocional</a>
-            <a class="nav-link" href="forms.html">Disabled</a>
+            <a class="nav-link" style="color: #dc3545;" href="forms.html">Faça uma denúncia</a>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
             <h5>Negligência infantil:</h5>
             <p class="card-text">A negligência envolve não atender às necessidades básicas da criança, sejam físicas, médicas, educacionais ou emocionais.
               O abuso pode ser físico, sexual ou emocional.<br>
-              A negligência e o abuso infantil com frequência ocorrem ao mesmo tempo e com outras formas de violência familiar, como o abuso do parceiro íntimo. Além dos danos imediatos, a negligência e o abuso aumentam o risco de apresentar problemas de longa duração, incluindo problemas de saúde mental e transtorno de uso de substâncias. O abuso infantil também está associado com problemas na idade adulta como, por exemplo, obesidade, doença cardíaca e doença pulmonar obstrutiva crônica (DPOC).<br>
+              A negligência e o abuso infantil com frequência ocorrem ao mesmo tempo e com outras formas de violência familiar, como o abuso do parceiro íntimo. Além dos danos imediatos, a negligência e o abuso aumentam o risco de apresentar problemas de longa duração, incluindo problemas de saúde mental e transtorno de uso de substâncias.<br>
               As crianças podem ser negligenciadas ou abusadas por pais e outros cuidadores ou parentes, pessoas que vivem na casa da criança ou pessoas que cuidam dela ocasionalmente (como professores, treinadores e clérigos).<br>
               A Delegacia de Proteção à Criança e ao Adolescente (Child Protective Services, CPS) dos Estados Unidos recebeu, em 2020, 3,9 milhões de denúncias sobre possível abuso infantil envolvendo 7,1 milhões de crianças. Dessas denúncias, aproximadamente 2,1 milhões foram investigadas minuciosamente e, dentre essas, foram identificadas 618.000 crianças que sofreram abuso ou negligência. As meninas são um pouco mais propensas a serem maltratadas do que os meninos. Bebês e crianças pequenas têm o maior risco de sofrer abuso.<br>
               Dentre as crianças que foram identificadas em 2020, 76,1% sofreram negligência (incluindo negligência médica), 16,5% sofreram abuso físico, 9,4% sofreram abuso sexual e 0,2% foram vítimas do tráfico sexual. Contudo, muitas crianças foram vítimas de vários tipos de abuso.<br>
@@ -65,6 +65,8 @@
               <a target="_blank" class="links" href="https://drauziovarella.uol.com.br/pediatria/negligencia-e-a-forma-de-violencia-mais-comum-contra-criancas-e-adolescentes/">https://drauziovarella.uol.com.br/pediatria/negligencia-e-a-forma-de-violencia-mais-comum-contra-criancas-e-adolescentes/</a>
               <br><br>
               <a target="_blank" class="links" href="https://amenteemaravilhosa.com.br/negligencia-emocional/">https://amenteemaravilhosa.com.br/negligencia-emocional/</a>
+              <br><br>
+              <a target="_blank" class="links" href="https://www.unicef.org/brazil/protecao-de-criancas-e-adolescentes-contra-violencias">https://www.unicef.org/brazil/protecao-de-criancas-e-adolescentes-contra-violencias</a>
             </p>
           </div>
         </div>
