--- a/Trabalho Web/psicologica.html
+++ b/Trabalho Web/psicologica.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="abuso.html">Abuso sexual infantil</a>
             <a class="nav-link" href="negligencia.html">Negligência infantil | abandono</a>
             <a class="nav-link active" aria-current="page" href="#">Violência psicológica | emocional</a>
-            <a class="nav-link" href="forms.html">Disabled</a>
+            <a class="nav-link" style="color: #dc3545;" href="forms.html">Faça uma denúncia</a>
           </div>
         </div>
       </div>
@@ -41,18 +41,21 @@
         </div>
         <div class="col-lg-8">
           <div class="card card-body margem-top">
-            <h5>Abuso sexual infantil:</h5>
-            <p class="card-text">Ao se referir à violência sexual encontramos duas vertentes que se encaixam dentro do assunto sendo elas: exploração sexual e abuso sexual. A exploração sexual tem ligação com o comércio de corpos e sexos, o acesso à exploração se da por meio de pornografia, prostituição, turismo sexual e tráfico.  Enquanto, que, abuso sexual ocorre quando um adulto tem interesse sexual por crianças ou adolescentes tanto com pessoas de vínculo familiar quanto em pessoas que não são do vínculo familiar (FLORENTINO, 2015).<br>
-              Sendo assim, é considerada constitutiva essa atitude de agressão do ser humano e os controles desses impulsos destrutivos se dão pelo processo de socialização. Com tudo, o uso da agressividade é decorrente da violência, tendo os fins destrutíveis que podem ser considerados voluntário-involuntários, racional/irracional, consciente/inconsciente. Os vínculos que foram criados com outras pessoas se tornam internalizados e ficam de lado os que são externos (CAPITÃO e ROMARO, 2008).<br>
-              De acordo com Florentino (2015) dentre esses assuntos cabe considerar que o abuso sexual faz o levantamento sobre violência domestica, violência sexual, e principalmente a violência contra crianças, adolescente e adultos. Diante desses levantamentos é possivel destacar que o sexo da vítima não importa, o agressor possui desejos e pode ser que esses sejam saciados dentro da própria família por longos tempos e por cobertura de alguns parentescos.<br><br>
-              <span class="fw-bold">O que é o Abuso sexual?</span><br>
-              O respeito ao próximo inclui também o respeito pelas decisões que o mesmo toma, sendo assim, a relação sexual tem se tornado algo cada vez mais propagado e difundido na sociedade, atualmente sua representação tem sido de formas distorcidas do que se pensava relacionável. Ocorrendo desenfreadamente a busca de novas situações não importando se vai além dos limites permitido para que não ultrapasse os direitos de outro ser humano (PFEIFFER e SALVAGNI, 2005).<br>
-              Entretanto, mesmo tendo evolução nos processos morais e legais de defesa da criança e adolescente, os casos de abusos sexuais ainda existem e não deixa de acontecer, e muito menos, deixa de ser visto de forma onde é um crime que deixa sequelas, danos, traumas e até mesmo transtornos e patologias que são consideradas irreparáveis para as vítimas (PFEIFFER E SALVAGNI, 2005).<br>
-              O abuso acontece quando um adulto ou adolescente mais velho usa de crianças e adolescentes para satisfação de seus prazeres sexuais. É considerado praticas de abuso sexual carícias, manipulação das genitálias, ânus e mama, ato sexual com ou sem penetração, entre outros. As violências são na maior parte presumidas em menores de quatorze anos (PFEIFFER E SALVAGNI, 2005).<br>
-              Dessa forma, é importante ressaltar que os casos de abuso sexual têm ligações diretas com a imagem de “poder” que o agressor passa para as vítimas, por se tratar de ter algum grau de parentesco, sendo da família ou bem próximo da família. Por ser assim, se torna um alvo difícil de suspeitar e resulta na complicação da necessidade de confirmação dos abusos sexuais infantis (PFEIFFER E SALVAGNI, 2005).<br><br>
-              <span class="fw-bold">Conclusão:</span><br>
-              Com base em pesquisas realizadas foram encontrados levantamentos de estudos feitos em diversas cidades, estados e países. Sendo assim, concluímos que os casos de abuso sexual e violência sexual é um problema de saúde pública em vários lugares do mundo, e a organização mundial de saúde (OMS) elenca um banco de dados frequentemente, bem como, busca orientar nas capacitações de profissionais que trabalharam diretamente com esses casos.
-              <br>Segundo dados do ministério da saúde, a maior parte das vítimas de estupro é constituída por crianças e adolescentes, em torno de 70% dos casos denunciados. Os agressores mais comuns são membros da própria família ou pessoas do convívio da vítima.</p>
+            <h5>O que é a violência psicológica?</h5>
+            <p class="card-text">É o conjunto de manifestações crônicas, persistentes e muito destrutivas que ameaçam o desenvolvimento psicológico normal da criança. Estes comportamentos compreendem insultos, desprezo, rejeição, indiferença, isolamento, ameaças e toda o tipo de hostilidade verbal contra a criança. Este tipo de maltrato infantil faz com que, nos primeiros anos da criança, ela não desenvolva o apego corretamente e, nos anos posteriores, se sinta excluída do ambiente familiar e social, afetando a sua autoestima e habilidades sociais.<br> 
+              A violência psicológica é muito mais sutil que outras, não em seus efeitos, mas na forma como se expressa. Não aplica golpes ou abusos físicos, mas se manifesta por meio de chantagem emocional, humilhação e comentários destrutivos. Ou também por ações ou omissões. Independente do disfarce que adote, acaba corroendo a autoestima das crianças.<br><br>
+              <span class="fw-bold">Os 10 tipos mais prejudiciais de violência psicológica para crianças:</span><br>
+              1. Humilhações. Refere-se a todas aquelas ações ou verbalizações em que a criança é levada a se sentir incompetente, inútil ou de pouco valor. Ela é chamada por nomes ou apelidos hostis e humilhantes.<br>
+              2. Agressões verbais. Gritos, insultos, comentários e pedidos mal educados o tempo todo. Também se aplica aqui o uso do sarcasmo nas respostas.<br>
+              3. Ênfase nos “erros”. Dessa forma, seu valor é erodido e uma única história ou imagem de si mesma é promovida. Por exemplo, quando dizem “lá vem o tortinho” ou “ele é vesgo”.<br>
+              4. Proibições ou impedimentos para desenvolver, explorar e se relacionar. Às vezes isso acontece porque as bases do apego seguro não são fornecidas para que as crianças tenham total segurança para explorar o mundo. Sua liberdade é cerceada, o medo é gerado e suas possibilidades são limitadas.<br>
+              5. Chantagem emocional. Geralmente vem na forma de “Se você não fizer isso, então…”. Dessa forma, as crianças são confrontadas com uma situação em que são responsáveis pelo bem-estar dos pais. Elas sentem que não são capazes de satisfazer seus desejos e interesses e acabam respondendo apenas aos dos adultos. É como se fossem colocadas entre a espada e a parede. Uma das formas mais comuns de chantagem emocional é quando as crianças são usadas como motim em conflitos de casal.<br>
+              6. Invalidação de emoções e interesses. As necessidades ou a forma como a criança se sente são subestimadas. Esse tipo de violência psicológica também se expressa por não reconhecer suas conquistas e aprendizados ou não parabenizá-los por eles. Dessa forma, a criança internaliza que suas necessidades não são importantes nem levadas em consideração.<br>
+              7. Rejeição. Os adultos não facilitam o contato ou a aproximação com a criança, não demonstram apoio nem carinho.<br>
+              8. Autoritarismo. O adulto se posiciona como quem dá as ordens e a criança deve ser quem obedece. Geralmente é baseado no adultocentrismo, que justifica esse comportamento com base na diferença de idade.<br>
+              9. Parentalidade baseada no medo. Às vezes, é pela própria ansiedade dos pais que eles transferem suas próprias inseguranças aos filhos. E assim, seu desejo de explorar e aprender é limitado. Outras vezes, trata-se de crianças que se comportam com muita cautela, introversão e cuidados exagerados para não incomodar os adultos, por medo de sua reação. Esse comportamento muitas vezes decorre de ter vivenciado ou presenciado uma situação de violência. Até porque os gestos e a postura dos pais são ameaçadores, sem que isso signifique que vão bater neles.<br>
+              10. Indiferença. Consiste em negligenciar e não dar atenção às demandas e necessidades das crianças. É como se elas não existissem. Essa situação muitas vezes leva à negligência dos pais.<br>
+            </p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -61,9 +64,9 @@
             <p class="card-text">
               <a class="links" href="https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1">https://br.psicologia-online.com/violencia-infantil-tipos-causas-consequencias-e-prevencao-13.html#anchor_1</a>
               <br><br>
-              <a class="links" href="https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm">https://meuartigo.brasilescola.uol.com.br/psicologia/abuso-sexual-criancas-adolescentes.htm</a>
+              <a class="links" href="https://soumamae.com.br/tipos-violencia-psicologica-mais-afetam-criancas/">https://soumamae.com.br/tipos-violencia-psicologica-mais-afetam-criancas/</a>
               <br><br>
-              <a class="links" href="https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater">https://agenciabrasil.ebc.com.br/direitos-humanos/noticia/2021-05/abuso-sexual-infantil-como-identificar-prevenir-e-combater</a>
+              <a class="links" href="https://www.unicef.org/brazil/protecao-de-criancas-e-adolescentes-contra-violencias">https://www.unicef.org/brazil/protecao-de-criancas-e-adolescentes-contra-violencias</a>
             </p>
           </div>
         </div>
