--- a/Trabalho Web/index.html
+++ b/Trabalho Web/index.html
@@ -103,7 +103,7 @@
           <div class="col-lg-4 container-fluid margem">
             <div class="collapse multi-collapse" id="multiCollapseExample3">
               <div class="card card-body">
-                <h5 class="card-title">Violência psicológica ou emocional</h5>
+                <h5 class="card-title">Violência psicológica</h5>
                 <p class="card-text">É o conjunto de manifestações crônicas, persistentes e muito destrutivas que ameaçam o desenvolvimento psicológico normal da criança. Estes comportamentos compreendem insultos, desprezo, rejeição, indiferença, isolamento, ameaças e toda o tipo de hostilidade verbal contra a criança.<br><br>Este tipo de maltrato infantil faz com que, nos primeiros anos da criança, ela não desenvolva o apego corretamente e, nos anos posteriores, se sinta excluída do ambiente familiar e social, afetando a sua autoestima e habilidades sociais.</p>
                 <a href="#" class="btn btn-primary">Leia mais!</a>
               </div>
