--- a/Trabalho Web/index.html
+++ b/Trabalho Web/index.html
@@ -96,7 +96,7 @@
               <div class="card card-body">
                 <h5 class="card-title">Negligência infantil ou abandono</h5>
                 <p class="card-text">Apesar de nem sempre ser reconhecida como tal, a negligência é uma forma de violência, e não só: é a mais comum contra menores de idade. Estima-se que nos serviços de apoio às crianças vítimas de violência no Brasil, cerca de 40% dos atendidos foram vítimas de negligência.<br><br>Ela é caracterizada principalmente pela omissão dos responsáveis em suas tarefa de prover o necessário para o desenvolvimento da criança, e pode gerar consequências graves que perduram por anos ou mesmo por toda a vida das vítimas.</p>
-                <a href="#" class="btn btn-primary">Leia mais!</a>
+                <a href="negligencia.html" class="btn btn-primary">Leia mais!</a>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               <div class="card card-body">
                 <h5 class="card-title">Violência psicológica</h5>
                 <p class="card-text">É o conjunto de manifestações crônicas, persistentes e muito destrutivas que ameaçam o desenvolvimento psicológico normal da criança. Estes comportamentos compreendem insultos, desprezo, rejeição, indiferença, isolamento, ameaças e toda o tipo de hostilidade verbal contra a criança.<br><br>Este tipo de maltrato infantil faz com que, nos primeiros anos da criança, ela não desenvolva o apego corretamente e, nos anos posteriores, se sinta excluída do ambiente familiar e social, afetando a sua autoestima e habilidades sociais.</p>
-                <a href="#" class="btn btn-primary">Leia mais!</a>
+                <a href="psicologica.html" class="btn btn-primary">Leia mais!</a>
               </div>
             </div>
           </div>
