--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -14,7 +14,7 @@
         <h1 class="title">Translate it!</h1>
         <div class="area">
             <div class="area_UI">
-                <div class="lifes">
+                <div class="lifes" id="life_html">
                     <span class="fa-solid fa-heart" style="color: #cc0000"> <span id="life">5</span></span>
                 </div>
                 <h2 id="word">
