--- a/trainingEnglish/index.html
+++ b/trainingEnglish/index.html
@@ -18,7 +18,7 @@
                     <span class="fa-solid fa-heart" style="color: #cc0000"> <span id="life">5</span></span>
                 </div>
                 <h2 id="word">
-                    Frase
+                    Selecione a dificuldade que deseja nos botões abaixo
                 </h2>
                 <input type="text" name="answer" class="answer_box" id="word_answer" placeholder="type here">
             </div>
@@ -33,6 +33,13 @@
         <div class="links">
             <a href="https://github.com/DnzGus" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/gustavo-diniz-653815238/" target="_blank">Linkedin</a>
+        </div>
+        <div class="difficulty">
+            <div class="dif_area">
+                <button class="dif_button" id="buttonEasy" onclick="easy()">Easy</button>
+                <button class="dif_button" id="buttonMedium" onclick="medium()">Medium</button>
+                <button class="dif_button" id="buttonHard" onclick="hard()">Hard</button>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
